# EntitySystem2

./: .gitignore  EntitySystem2.sln
EntitySystem2/: .gitignore  Animation.h  AttachSystem.cpp  AttachSystem.h  CMakeLists.txt  Collider.cpp  Collider.h  CollisionSystem.cpp  CollisionSystem.h  Components.h  EntitySystem2.vcxproj  EntitySystem2.vcxproj.filters  Event.h  EventDispatcher.cpp  EventDispatcher.h  Fastdelegate.h  GameState.h  Input.cpp  Input.h  InputController.cpp  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScoreManager.cpp  ScoreManager.h  ScriptManager.cpp  ScriptManager.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderingSystem.cpp  TextRenderingSystem.h  Vector2.h  main.cpp  pong.lua  test.lua
EntitySystem2/EntityW/: ClassTypeId.h  Component.cpp  Component.h  Entity.cpp  Entity.h  EventDispatcher.cpp  EventDispatcher.h  System.cpp  System.h  Time.h  World.cpp  World.h
EntitySystem2/dotnet/: InputComponent.cs  MovementComponent.cs  MovementSystem.cs  Sprite.cs  dotnet.csproj
EntitySystem2/dotnet/engine/: Components.cs  Configuration.cs  Engine.cs  Entity.cs  Event.cs  IComponent.cs  Input.cs  NativeEngine.cs  SpriteComponent.cs  System.cs  Time.cs  TransformComponent.cs  Vector2.cs
EntitySystem2/dotnet/engine/Components/: Component.cs  Components.cs  DotnetComponent.cs  NativeComponent.cs  SpriteComponent.cs  TransformComponent.cs
EntitySystem2/engine/: Animation.h  CollisionSystem.cpp  CollisionSystem.h  Components.h  Configuration.h  DotnetScriptManager.cpp  DotnetScriptManager.h  Engine.cpp  Engine.h  Event.h  IScriptManager.h  Input.cpp  Input.h  InputController.h  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptManager.cpp  ScriptManager.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderingSystem.cpp  TextRenderingSystem.h  cute_c2.h
EntitySystem2/engine/EntityW/: ClassTypeId.h  Component.h  Entity.cpp  Entity.h  EventDispatcher.cpp  EventDispatcher.h  System.cpp  System.h
EntitySystem2/include/sol/: sol.hpp
EntitySystem2/scripts/: attachSystem.lua  endGame.lua  engine.lua  inputSystem.lua  launchBall.lua  level.lua  movementSystem.lua  pong.lua  score.lua  scoreManager.lua  sprite.lua  stateManager.lua  table.lua
Lua/: Lua.vcxproj  Lua.vcxproj.filters
LuaTest/: LuaTest.vcxproj  LuaTest.vcxproj.filters  main.cpp  sol.hpp  test.lua
